Bug Fix: Have the language bar not  overlap the header menu.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -160,7 +160,6 @@ footer.bk-footer p {
 	&.language-selector--horizontal,
 	&.language-selector--dropdown {
 		z-index: 10100;
-		position: absolute;
 		left: 0;
 		right: 0;
 		box-sizing: content-box;
